--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts":{
     "start": "node app.js",
-    "test": "mocha ./tests/*.js"
+    "test": "mocha ./tests/*.js --recursive --watch"
   },
-  "author": "]",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.1.2",
