--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "mocha": "^4.0.1",
     "chai": "^4.1.2",
     "express": "^4.16.2"
   }
