--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts":{
     "start": "node app.js",
-    "test": "mocha ./tests/*.js --recursive --watch"
+    "watch": "mocha --recursive --watch",
+    "test": "mocha --recursive"
   },
   "author": "",
   "license": "ISC",
