--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts":{
+  "scripts": {
     "start": "node app.js",
     "watch": "mocha --recursive --watch",
     "test": "mocha --recursive"
@@ -14,5 +14,8 @@
     "mocha": "^4.0.1",
     "chai": "^4.1.2",
     "express": "^4.16.2"
+  },
+  "dependencies": {
+    "handlebars": "^4.0.11"
   }
 }
