--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "watch": "mocha --recursive --watch",
     "test": "mocha --recursive"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "mocha": "^4.0.1",
     "chai": "^4.1.2",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "mocha": "^4.0.1",
+    "nodemon": "^1.14.11"
   },
   "dependencies": {
+    "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.11"
   }
 }
