--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "chai": "^4.1.2",
     "express": "^4.16.2",
     "mocha": "^4.0.1",
-    "nodemon": "^1.14.11"
+    "mongoose": "^5.0.2",
+    "nodemon": "^1.14.11",
+    "sinon": "^4.2.2",
+    "sinon-chai": "^2.14.0"
   },
   "dependencies": {
     "express-handlebars": "^3.0.0",
